--- a/Tarea4/Tarea4.ioc
+++ b/Tarea4/Tarea4.ioc
@@ -37,28 +37,25 @@ Mcu.IP0=DMA
 Mcu.IP1=I2C1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH1 - OSC_OUT
 Mcu.Pin1=PA2
-Mcu.Pin10=PB8
-Mcu.Pin11=PB9
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA3
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=PB2
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=PB3
-Mcu.PinsNb=14
+Mcu.Pin3=PA6
+Mcu.Pin4=PB12
+Mcu.Pin5=PA13
+Mcu.Pin6=PA14
+Mcu.Pin7=PB3
+Mcu.Pin8=PB8
+Mcu.Pin9=PB9
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -68,7 +65,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -100,19 +97,14 @@ PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA5.Mode=TX_Only_Simplex_Unidirect_Master
-PA5.Signal=SPI1_SCK
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=ledPrueba
 PA6.Locked=true
 PA6.Signal=GPIO_Output
-PA7.Mode=TX_Only_Simplex_Unidirect_Master
-PA7.Signal=SPI1_MOSI
-PB2.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PB2.GPIO_Label=actualizacionDato
-PB2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PB2.Locked=true
-PB2.Signal=GPXTI2
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=actualizacionDato
+PB12.Locked=true
+PB12.Signal=GPXTI12
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -191,13 +183,8 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
-SH.GPXTI2.0=GPIO_EXTI2
-SH.GPXTI2.ConfNb=1
-SPI1.CalculateBaudRate=8.0 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=250-1
 TIM2.Prescaler=16000-1
