--- a/proyecto/proyecto.ioc
+++ b/proyecto/proyecto.ioc
@@ -14,28 +14,31 @@ Mcu.IP0=I2C1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
+Mcu.IP6=TIM4
 Mcu.IP7=USART2
 Mcu.IPNb=8
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PH1 - OSC_OUT
-Mcu.Pin1=PA2
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin13=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin2=PA3
-Mcu.Pin3=PB12
-Mcu.Pin4=PA11
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14
-Mcu.Pin7=PB3
-Mcu.Pin8=PB8
-Mcu.Pin9=PB9
-Mcu.PinsNb=14
+Mcu.Pin0=PC13-ANTI_TAMP
+Mcu.Pin1=PH1 - OSC_OUT
+Mcu.Pin10=PB7
+Mcu.Pin11=PB8
+Mcu.Pin12=PB9
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin2=PC2
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB3
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -43,6 +46,7 @@ MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -54,8 +58,6 @@ NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-PA11.Locked=true
-PA11.Signal=S_TIM1_CH4
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -76,20 +78,36 @@ PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PB12.GPIOParameters=GPIO_Label
-PB12.GPIO_Label=DIR
-PB12.Locked=true
-PB12.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=finalIzquierdo
+PA5.Locked=true
+PA5.Signal=GPXTI5
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=finalDerecho
+PA6.Locked=true
+PA6.Signal=GPXTI6
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=STEP
+PB7.Locked=true
+PB7.Signal=S_TIM4_CH2
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
+PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
+PC13-ANTI_TAMP.GPIO_Label=enable
+PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.Signal=GPIO_Output
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=DIR
+PC2.Locked=true
+PC2.Signal=GPIO_Output
 PH1\ -\ OSC_OUT.GPIOParameters=GPIO_Label
 PH1\ -\ OSC_OUT.GPIO_Label=blinky
 PH1\ -\ OSC_OUT.Locked=true
@@ -125,7 +143,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -158,29 +176,33 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
-SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
-SH.S_TIM1_CH4.ConfNb=1
-TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM1.IPParameters=Prescaler,Period,Channel-PWM Generation4 CH4,Pulse-PWM Generation4 CH4
-TIM1.Period=1000-1
-TIM1.Prescaler=16-1
-TIM1.Pulse-PWM\ Generation4\ CH4=200
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
+SH.S_TIM4_CH2.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=250-1
 TIM2.Prescaler=16000-1
 TIM3.IPParameters=Prescaler,Period
 TIM3.Period=8000
 TIM3.Prescaler=10000-1
+TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM4.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation2 CH2
+TIM4.Period=30
+TIM4.Prescaler=16000
+TIM4.Pulse-PWM\ Generation2\ CH2=30
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM1_VS_ClockSourceINT.Mode=Internal
-VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=NUCLEO-F411RE
 boardIOC=true
 isbadioc=false
