--- a/proyecto/proyecto.ioc
+++ b/proyecto/proyecto.ioc
@@ -2,29 +2,6 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=USART2_RX
-Dma.Request1=USART2_TX
-Dma.RequestsNb=2
-Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_RX.0.Instance=DMA1_Stream5
-Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.0.Mode=DMA_NORMAL
-Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART2_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_TX.1.Instance=DMA1_Stream6
-Dma.USART2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART2_TX.1.Mode=DMA_NORMAL
-Dma.USART2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.DutyCycle=I2C_DUTYCYCLE_16_9
@@ -33,49 +10,50 @@ I2C1.IPParameters=I2C_Mode,DutyCycle
 KeepUserPlacement=false
 Mcu.CPN=STM32F411RET6
 Mcu.Family=STM32F4
-Mcu.IP0=DMA
-Mcu.IP1=I2C1
-Mcu.IP10=USART2
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=TIM4
-Mcu.IP8=TIM5
-Mcu.IP9=TIM9
-Mcu.IPNb=11
+Mcu.IP0=I2C1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
+Mcu.IP6=TIM4
+Mcu.IP7=TIM5
+Mcu.IP8=TIM9
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=PB7
-Mcu.Pin11=PB8
-Mcu.Pin12=PB9
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin16=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin17=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin10=PA14
+Mcu.Pin11=PD2
+Mcu.Pin12=PB3
+Mcu.Pin13=PB7
+Mcu.Pin14=PB8
+Mcu.Pin15=PB9
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PC2
+Mcu.Pin20=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM9_VS_ClockSourceINT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=PB3
-Mcu.PinsNb=19
+Mcu.Pin7=PA7
+Mcu.Pin8=PB12
+Mcu.Pin9=PA13
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
 MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -116,9 +94,17 @@ PA5.GPIO_Label=finalIzquierdo
 PA5.Locked=true
 PA5.Signal=GPXTI5
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=finalDerecho
+PA6.GPIO_Label=switch
 PA6.Locked=true
 PA6.Signal=GPXTI6
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=finalDerecho
+PA7.Locked=true
+PA7.Signal=GPXTI7
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=DATA
+PB12.Locked=true
+PB12.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -141,6 +127,10 @@ PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=DIR
 PC2.Locked=true
 PC2.Signal=GPIO_Output
+PD2.GPIOParameters=GPIO_Label
+PD2.GPIO_Label=clock
+PD2.Locked=true
+PD2.Signal=GPXTI2
 PH1\ -\ OSC_OUT.GPIOParameters=GPIO_Label
 PH1\ -\ OSC_OUT.GPIO_Label=blinky
 PH1\ -\ OSC_OUT.Locked=true
@@ -176,7 +166,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_TIM9_Init-TIM9-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -209,10 +199,14 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
