--- a/proyecto/proyecto.ioc
+++ b/proyecto/proyecto.ioc
@@ -12,6 +12,7 @@ Mcu.CPN=STM32F411RET6
 Mcu.Family=STM32F4
 Mcu.IP0=I2C1
 Mcu.IP1=NVIC
+Mcu.IP10=USART2
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM2
@@ -19,8 +20,8 @@ Mcu.IP5=TIM3
 Mcu.IP6=TIM4
 Mcu.IP7=TIM5
 Mcu.IP8=TIM9
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP9=TIM10
+Mcu.IPNb=11
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -38,6 +39,7 @@ Mcu.Pin19=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PC2
 Mcu.Pin20=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin21=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PA5
@@ -45,7 +47,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB12
 Mcu.Pin9=PA13
-Mcu.PinsNb=22
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -209,6 +211,9 @@ SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
+TIM10.IPParameters=Prescaler,Period
+TIM10.Period=2000
+TIM10.Prescaler=16000
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=250-1
 TIM2.Prescaler=16000-1
@@ -230,6 +235,8 @@ USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
